# VibeVoice

./: .gitignore  AGENTS.md  analysis.ipynb  pyproject.toml
.github/: copilot-instructions.md
demo/: realtime_inference.py
eval/: compare.py  test_corpus.json
export/iree/: .gitignore  eval.py  export.py  export_manifest.json  infer.py  profile_infer.py  pyproject.toml  read_output.py  trace_shapes.py  wrappers.py
model/: .gitattributes  README.md  config.json  preprocessor_config.json
